--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     testImplementation 'org.testng:testng:6.9.6'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
+
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+    ///////////////////////for glide//////////////////////
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    /////////////////////////end////////////////////////////////
 }
